<resources>
    <string name="app_name">MQTTDroid</string>
    <string name="search_hint">Mqtt</string>

    <string name="permission_bind_proxy">Bind to MQTTDroid Proxy</string>
    <string name="permission_bind_auth">Bind to MQTTDroid Auth</string>
    <string name="permission_bind_rcv">Bind to MQTTDroid Receiver</string>

    <string name="status_proxy_stopped">MQTT service is stopped.</string>
    <string name="status_proxy_starting">MQTT service is running up.</string>
    <string name="status_proxy_stopping">MQTT service is shutting down.</string>
    <string name="status_proxy_connected">MQTT service connected.</string>
    <string name="status_proxy_disconnected">MQTT service disconnected.</string>

    <string name="details_auth_required">Authorizations</string>
    <string name="details_lbl_pub">Publish on:</string>
    <string name="details_lbl_sub">Subscribe to:</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_new">Show New</string>
    <string name="action_filter_allowed">Show Allowed</string>
    <string name="action_filter_refused">Show Refused</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_name">By Name</string>
    <string name="action_sort_package">By Package</string>
    <string name="action_sort_date">By Date</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="about_activity_title">About MQTTDroid</string>
    <string name="about_title_author">Author:</string>
    <string name="about_author">Giuseppe Zerbo</string>
    <string name="about_email">giuseppe.zerbo@gmail.com</string>
    <string name="about_title_version">Version:</string>
    <string name="about_version">n/a</string>
    <string name="about_title_license">License:</string>
    <string name="about_license">Mozilla Public License, v. 2.0</string>
    <string name="about_license_url">http://mozilla.org/MPL/2.0/</string>
    <string name="about_app_url">https://github.com/pepzer/MQTTDroid</string>

    <string name="restart_to_apply">Restart the service to apply the config.</string>


    <string name="pref_proxy_active">Proxy Active</string>
    <string name="pref_mqtt_title">MQTT Settings</string>
    <string name="pref_title_client_id">Client ID</string>
    <string name="pref_default_client_id">MQTTDroid</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_default_username">MQTTDroid</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_default_password">mqttpass</string>
    <string name="pref_title_protocol">Protocol</string>
    <string name="pref_default_protocol">TCP</string>
    <string name="pref_title_broker_addr">Broker IP or Hostname</string>
    <string name="pref_default_broker_addr">127.0.0.1</string>
    <string name="pref_title_broker_port">Broker Port</string>
    <string name="pref_default_broker_port">1883</string>
    <string name="pref_title_keepalive">Keepalive Interval (sec)</string>
    <string name="pref_default_keepalive">60</string>
    <string name="pref_title_clean_session">Clean Session</string>
    <string name="pref_title_auto_reconnect">Auto Reconnect</string>
    <string name="pref_title_compl_timeout">Completion Timeout (msec)</string>
    <string name="pref_default_compl_timeout">3000</string>
    <string name="pref_title_custom_ca">Use custom CA cert</string>
    <string name="pref_title_crt_path">Path to the CA cert</string>
    <string name="pref_default_crt_path">/MQTTDroid/ca.crt</string>

    <string name="proxy_notification">MQTTDroid Proxy is running.</string>
    <string name="auth_notification">MQTTDroid Auth is running.</string>
    <string name="auth_notification_title">New authorization request</string>

    <string name="snack_proxy_disconnected">Proxy service disconnected.</string>
    <string name="snack_auth_disconnected">Auth service disconnected.</string>

    <string name="channel_name">MQTT Service Notification</string>
    <string name="channel_description">Notifications for the MQTT Service</string>
</resources>
